# axon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RULES.md  SECURITY.md  TASKS.md  conftest.py  docker-compose.prometheus.yml  docker-compose.yml  pyproject.toml  setup.sh
.claude/: loop.yaml  settings.json
.claude/hooks/: session-start.sh
.claude/skills/: caveman.md
.forge/cross-review/: pr-82.md  pr-82.response.md  pr-95.md  pr-95.response.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  model.py  phase0_baseline.json  phase0_gpu.json  phase0_gpu.py  phase0_gpu_diag.json  phase0_gpu_diag.py  phase0_heavy.json  phase0_heavy.py  phase0_probe.json  phase0_probe.py  visualize.py
benchmarks/scenarios/: __init__.py  long_session_axon.py  long_session_baseline.py
config/: expansion_sources.json  projects.json
data/compression/: stats.jsonl
doc/scripts/: health-check.py
doc/tests/: test_health_check.py
docs/: .capture-marker  ADOPTION.md  ADR.md  AGENT_PARTY.md  ARD.md  AUDIT_EXCEPTIONS.md  AUDIT_REPORT.md  CAPTURE_ROBUSTNESS.md  COGNITIVE_AUDIT.md  GLYPH_INTEGRATION_FOLLOWUPS.md  LINKEDIN_ARTICLE_NOTES.md  METRICS.md  MIGRATION.md  MIGRATION_LOGGING.md  MIGRATION_PYDANTIC.md  ODISSEU.md  P3_EXTENSION_DOCS.md  P3_PLAN.md  PROFILES.md  PROJECT_OVERVIEW.md  QUICKSTART_LINUX.md  QUICKSTART_MACOS.md  QUICKSTART_WINDOWS_WSL2.md  ROADMAP.md  SECOND_BRAIN.md  SUPPORT_MATRIX.md  TIL_AUTOMATION.md  USAGE_GUIDE.md  VAULT_PUBLISHING_MAP.md  VAULT_SETUP.md  agent-backlog.md  ci-workflow-proposed.yml  expansion-operations-checklist.md  expansion-weekly-tracker.csv  expansion-weekly-tracking.md  gpu-setup.md
docs/archive/: EXECUTION_PLAN.md  prometheus-context-detection-crossplatform.md  prometheus-context-engine.md  prometheus-context-isolation.md  prometheus-knowledge-split.md  prometheus-second-brain-full.md  prometheus-vault-final.md
docs/decisions/: dec-100-rename-prometheus-to-axon.md  dec-101-revoke-d4-drop-neo4j.md  dec-102-cut-scope-router-cloud-profiles.md  dec-103-cross-agent-mcp-primary.md  dec-104-event-driven-not-time-driven.md  dec-105-migrate-domain-models-to-pydantic.md  dec-106-routing-profiles.md  dec-107-validation-strategy.md  dec-108-complete-axon-rename.md  dec-109-tool-tracing-and-risk-gating.md  dec-110-declarative-memory-signal.md  dec-111-adr-validation-layers.md  dec-112-sqlite-wal-pending-dir.md  dec-113-hooks-pre-commit-framework.md  dec-114-doctor-diagnostic-first.md  dec-115-supersession-ranking-penalty.md  dec-116-glyph-graph-delegation.md  dec-117-glyph-vs-graphiti-graph-layer.md  dec-118-rtkx-vs-llmlingua-compression-baseline.md  dec-119-canonical-activity-stores-for-live-renderers.md  dec-120-no-langchain-langgraph-chat.md  dec-121-postgres-unified-storage.md  dec-122-local-roles-backend-gpt-oss-120b.md  dec-125-retire-pb-entry-point.md  dec-126-adr-classifier-gpt-oss-contract.md
docs/launch/: RUNBOOK.md  beta.md
domain-packs/: go.json  kotlin.json  python.json  rust.json  typescript.json
domain-packs/corporate-use/: domain-pack.json
domain-packs/research/: domain-pack.json
domain-packs/software/: domain-pack.json
domain-packs/support/: domain-pack.json
examples/: spring-migration.md
scripts/: analyze_retrieval_telemetry.py  axon-adopt-all.sh  axon-backends-start.sh  axon-bootstrap.sh  axon-mirror.sh  build_ablation_index.py  calibrate_retrieval_bands.py  check_onboarding_drift.py  collect_metrics_mac.sh  com.axon.mirror.plist.example  eval_exact_terms.py  index_once.py  install_vault_hook.sh  migrate_bluegreen.py  migrate_decisions.py  migrate_graph.py  migrate_sessions.py  populate_recall_baseline.py  recall_savings_report.py  recall_usage_report.py  run_adr_model_grid.py  vault-post-commit.sh  verify_migration.py
site/: README.md  index.html  style.css
src/axon/: __main__.py  exceptions.py  promotion.py
src/embedder/: __init__.py  chunker.py
src/praxis/: __init__.py  checkpoint.py  graph.py  health.py  nodes.py  orchestrator.py  parser.py  server.py  state.py  worktree.py
tests/: conftest.py  test_file_walk_security.py  test_no_mem0.py  test_no_qdrant.py  test_no_redis.py  test_no_sqlite.py
tests/adr/: test_adr_model_resolution.py  test_audit.py  test_call_llm_contract.py  test_clis.py  test_draft_pool.py  test_infer_commit_signal_gate.py  test_inference.py  test_signal.py
tests/benchmark/: test_adr_model_eval.py  test_compression_fallback.py  test_contracts.py  test_harness.py  test_model_eval.py  test_reporting.py  test_retrieval.py  test_retrieval_eval.py  test_setup_mode.py  test_suite.py  test_supersession_benchmark.py
tests/benchmarks/: test_model.py  test_scenarios.py  test_visualize.py
tests/cli/: test_axon_cli.py  test_gain_cli.py  test_index_lock_guard.py  test_migrate_cli.py  test_open_file_cache_backend.py  test_pb_cli.py  test_setup.py  test_setup_session.py  test_til_reindex.py
tests/code/: test_diff_symbols.py  test_indexer.py  test_resolver.py
tests/config/: test_configure.py  test_db_backend.py  test_decisions_backend.py  test_fileindex_backend.py  test_graph_backend.py  test_platform.py  test_profiles.py  test_project_manifest.py  test_runtime.py  test_runtime_expansion.py  test_runtime_modes.py  test_runtime_pg.py  test_runtime_toml.py  test_runtime_toml_properties.py  test_scoring_config.py  test_sessions_backend.py  test_setup_script.py  test_vector_backend.py
tests/context/: test_cache_key.py  test_compression_quality.py  test_contracts.py  test_graph_source.py  test_graph_source_cache_pg.py  test_rtk_bootstrap.py  test_rtk_ccr.py  test_rtk_resolution.py  test_staleness.py
tests/core/: test_decision.py  test_edge.py  test_symbol.py
tests/doctor/: test_checks_adr.py  test_checks_capture.py  test_checks_index_composition.py  test_checks_install_branch.py  test_checks_recall_savings.py  test_checks_toolchain.py  test_cli_doctor.py
(+552 files in other folders)
