[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axon-mcp"
version = "0.1.0"
description = "Agent-agnostic context network — same context across any AI coding agent"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AXON contributors" }]
keywords = ["mcp", "coding-agent", "context", "ai-agents", "local-first", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastembed>=0.4.0",
    "qdrant-client>=1.9.0",
    "redis>=5.0.0",
    "watchdog>=4.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "litellm>=1.40.0",
    "mcp[cli]>=1.0.0",
    "typer>=0.12.0",
    "ollama>=0.2.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "mem0ai>=0.1.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    # GLYPH is the canonical knowledge-graph retrieval lib (dec-116). Pinned to
    # the v0.1.0 tag (the completed GLYPH P0-P7 state, commit 5366308) so the
    # build stays deterministic. AXON wires GraphRetriever/NetworkXStore through
    # their constructors (not the file-based facade), which are stable here.
    # `retrieval` extra pulls numpy (InMemoryVectorIndex); we wrap AXON's own
    # EmbedderEngine, so the heavy `embeddings`/sentence-transformers extra is
    # intentionally omitted.
    "glyph-kg[retrieval] @ git+https://github.com/sammyjdev/glyph-kg.git@v0.1.0",
]

[project.urls]
Homepage = "https://github.com/sammyjdev/axon"
Repository = "https://github.com/sammyjdev/axon"
Documentation = "https://github.com/sammyjdev/axon#readme"

[project.scripts]
axon = "axon.__main__:app"

[project.optional-dependencies]
http = [
    # OpenAI-compatible HTTP endpoint (axon serve-http).
    # Install with: pip install axon-mcp[http]
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "testcontainers[qdrant,redis,postgres]>=4.0.0",
    "hypothesis>=6.0",
    # httpx is needed to test the FastAPI HTTP endpoint with TestClient.
    "httpx>=0.27.0",
]
bench = [
    "matplotlib>=3.8",
]

[tool.hatch.metadata]
# Required for the glyph-kg git+https direct reference (dec-116 delegation).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/axon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
# ---------------------------------------------------------------------------
# Per-module coverage gate (Plan A touched modules). Run with:
#
#   pytest <test-files> \
#     --cov=axon.embedder.chunker \
#     --cov=axon.embedder.graph_extractor \
#     --cov=axon.repo.file_walk \
#     --cov=axon.embedder.pipeline \
#     --cov-report=term-missing
#
# Target threshold: >= 80% for each module EXCEPT axon.embedder.pipeline.
#
# axon.embedder.pipeline is intentionally below 80% at the unit level:
#   index_path / ingest_file / _flush are runtime integration paths that
#   require a live embedder + Qdrant. These paths are wired and
#   integration-tested in Plan C. Do NOT add --cov-fail-under globally;
#   that would fail the suite on pipeline.py prematurely.
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Fixtures alimentam o chunker (ADR-005/D5); estilo nao deve ser modificado.
"tests/embedder/fixtures/**" = ["UP", "E", "F"]
