[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axon-context-mcp"
version = "0.1.1"
description = "Agent-agnostic context network — same context across any AI coding agent"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "AXON contributors" }]
keywords = ["mcp", "coding-agent", "context", "ai-agents", "local-first", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "defusedxml>=0.7.1",
    "fastembed>=0.4.0",
    "watchdog>=4.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "litellm>=1.40.0",
    "mcp[cli]>=1.0.0",
    "typer>=0.12.0",
    "click>=8.2",
    "ollama>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    # GLYPH is the canonical knowledge-graph retrieval lib (dec-116). AXON wires
    # GraphRetriever/NetworkXStore through their constructors (not the
    # file-based facade), which are stable across the 0.1.0 -> 0.2.0 jump.
    # `retrieval` extra pulls numpy + scipy (InMemoryVectorIndex, PageRank); we
    # wrap AXON's own EmbedderEngine, so the heavy `embeddings`/
    # sentence-transformers extra is intentionally omitted. Pinned to ==0.2.0
    # (not a range) for the same determinism dec-116 wanted from the old git
    # tag pin - glyph-kg is now a normal PyPI dependency (GHSA-r7wg-f7r2-8wf7:
    # PyPI rejects direct git+https Requires-Dist entries outright).
    "glyph-kg[retrieval]==0.2.0",
]

[project.urls]
Homepage = "https://github.com/sammyjdev/axon"
Repository = "https://github.com/sammyjdev/axon"
Documentation = "https://github.com/sammyjdev/axon#readme"

[project.scripts]
axon = "axon.__main__:app"

[project.optional-dependencies]
http = [
    # OpenAI-compatible HTTP endpoint (axon serve-http).
    # Install with: pip install axon-context-mcp[http]
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.5.0",
    "testcontainers[postgres]>=4.0.0",
    "hypothesis>=6.0",
    # httpx is needed to test the FastAPI HTTP endpoint with TestClient.
    "httpx>=0.27.0",
]
bench = [
    "matplotlib>=3.8",
]

[tool.hatch.metadata]
# Required for the glyph-kg git+https direct reference (dec-116 delegation).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/axon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
# ---------------------------------------------------------------------------
# Per-module coverage gate (Plan A touched modules). Run with:
#
#   pytest <test-files> \
#     --cov=axon.embedder.chunker \
#     --cov=axon.embedder.graph_extractor \
#     --cov=axon.repo.file_walk \
#     --cov=axon.embedder.pipeline \
#     --cov-report=term-missing
#
# Target threshold: >= 80% for each module EXCEPT axon.embedder.pipeline.
#
# axon.embedder.pipeline is intentionally below 80% at the unit level:
#   index_path / ingest_file / _flush are runtime integration paths that
#   require a live embedder + Qdrant. These paths are wired and
#   integration-tested in Plan C. Do NOT add --cov-fail-under globally;
#   that would fail the suite on pipeline.py prematurely.
# ---------------------------------------------------------------------------

[tool.ruff]
# Match requires-python (>=3.11) so ruff never suggests py312-only syntax
# (e.g. PEP 695 generics), which would SyntaxError on the 3.11 CI runner.
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Fixtures alimentam o chunker (ADR-005/D5); estilo nao deve ser modificado.
"tests/embedder/fixtures/**" = ["UP", "E", "F"]
